Test/Bool/PropExt.expected
Test/Bool/PropExt.lean:4:2: error: no goals to be solved
